--- a/index.html
+++ b/index.html
@@ -1,221 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Beautiful Todo List</title>
-    <!-- Include the correct Font Awesome library version -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fullcalendar@5.10.1/main.css"/>
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            padding: 0;
-            background: url("1.jpg");
-            background-size: cover; /* Adjusts the background image size to cover the entire body */
-            background-position: center; /* Centers the background image */
-            transition: background 0.5s ease-in-out;
-            margin: 0;
-}
-
-        header {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            background: rgba(0, 0, 0, 0.3);
-            color: #fff;
-            text-align: center;
-            padding: 15px 20px; /* Increased padding for the title */
-            z-index: 1000;
-            backdrop-filter: blur(10px);
-            display: flex;
-            justify-content: space-between; /* Align items to the right */
-            transition: background 0.5s ease-in-out;
-        }
-
-        .navbar-links {
-            display: flex;
-            gap: 10px; /* Adjusted spacing between links */
-        }
-
-        .navbar-links a {
-            color: #fff;
-            text-decoration: none;
-            padding: 10px;
-            transition: color 0.3s ease-in-out;
-        }
-
-        .navbar-links a:hover {
-            color: #3498db;
-        }
-
-        .container {
-            display: flex;
-            flex-wrap: wrap;
-            max-width: 1200px;
-            margin: 80px auto 20px;
-            padding: 20px;
-            background-color: rgba(0, 0, 0, 0.3);
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            opacity: 0;
-            transform: translateY(-20px);
-            transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
-            color: white;
-        }
-
-        .container.loaded {
-            opacity: 1;
-            transform: translateY(0);
-        }
-
-        .todo-section {
-            flex: 1;
-            margin-right: 20px;
-            background-color: rgba(255, 255, 255, 0.7);
-            border-radius: 8px;
-            padding: 20px;
-            margin-bottom: 20px; /* Added space between todo and calendar */
-        }
-
-        .calendar-section {
-            flex: 1;
-            opacity: 0;
-            transform: translateX(20px);
-            transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
-        }
-
-        .calendar-section.loaded {
-            opacity: 1;
-            transform: translateX(0);
-        }
-
-        .todo-list {
-            list-style: none;
-            padding: 0;
-        }
-
-        .todo-item {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 10px;
-            border-bottom: 1px solid #eee;
-            opacity: 0;
-            transform: translateX(-20px);
-            transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
-        }
-
-        .todo-item.loaded {
-            opacity: 1;
-            transform: translateX(0);
-        }
-
-        .todo-item input[type="checkbox"] {
-            margin-right: 10px;
-        }
-
-        .add-todo {
-            display: flex;
-            margin-top: 20px;
-        }
-
-        .add-todo input[type="text"] {
-            flex: 1;
-            padding: 10px;
-        }
-
-        .add-todo button {
-            padding: 10px;
-            background-color: #333;
-            color: #fff;
-            border: none;
-            cursor: pointer;
-        }
-
-        .title-icon {
-            font-size: 24px;
-            color: #fff;
-            margin-right: 10px;
-        }
-    </style>
-</head>
-<body>
-    <header>
-        <!-- Move links to the right side of the header -->
-        <div class="title-icon">
-            <i class="fas fa-list-check"></i>
+<div id="organizeModal" class="modal-cs">
+        <div class="modal-content">
+            <span class="close" onclick="toggleOrganizeSection()">&times;</span>
+            <h2>Organize Tasks</h2>
+            <input type="text" id="organizeCategory" placeholder="Category Name">
+            <button class="add-button" onclick="addCategory()">Add Category</button>
+            <ul id="categoriesList"></ul>
         </div>
-        <div class="navbar-links">
-            <a href="#">Home</a>
-            <a href="#">About</a>
-            <a href="#">Contact</a>
-            <a href="signin.html">Logout</a>
-        </div>
-    </header>
-
-    <div class="container" id="mainContainer">
-        <div class="todo-section" id="todoSection">
-            <h2>Todo List</h2>
-            <ul class="todo-list" id="todoList">
-                <!-- Todo items will be dynamically added here -->
-            </ul>
-
-            <div class="add-todo">
-                <input type="text" id="newTodo" placeholder="Add a new task">
-                <button onclick="addTodo()">Add Task</button>
-            </div>
-        </div>
-
-        <div class="calendar-section" id="calendarSection"></div>
+        
     </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.10.1/main.js"></script>
-    <script>
-        document.addEventListener('DOMContentLoaded', function() {
-            // Apply loaded class for smooth entrance animations
-            document.getElementById('mainContainer').classList.add('loaded');
-            document.getElementById('todoSection').classList.add('loaded');
-            document.getElementById('calendarSection').classList.add('loaded');
-
-            // Initialize FullCalendar
-            var calendarEl = document.getElementById('calendarSection');
-            var calendar = new FullCalendar.Calendar(calendarEl, {
-                initialView: 'dayGridMonth',
-                events: [
-                    // Add your events here
-                ]
-            });
-
-            calendar.render();
-        });
-
-        function addTodo() {
-            const newTodoInput = document.getElementById('newTodo');
-            const todoList = document.getElementById('todoList');
-
-            if (newTodoInput.value.trim() !== '') {
-                const todoItem = document.createElement('li');
-                todoItem.className = 'todo-item';
-                todoItem.innerHTML = `
-                    <input type="checkbox">
-                    <span>${newTodoInput.value}</span>
-                    <button onclick="removeTodo(this)">Remove</button>
-                `;
-
-                todoList.appendChild(todoItem);
-                newTodoInput.value = '';
-
-                // Apply loaded class for smooth entrance animations
-                todoItem.classList.add('loaded');
-            }
-        }
-
-        function removeTodo(button) {
-            const todoItem = button.parentElement;
-            todoItem.remove();
-        }
-    </script>
-</body>
-</html>
