--- a/index(1).html
+++ b/index(1).html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>To-Do List</title>
+    <title>TaskEase</title>
     
     <link rel="stylesheet" href="newc.css">
 </head>
@@ -48,7 +48,7 @@
         <div class="modal-content" >
             <center>
         <span id="mode">  <button class="my-button">change mode</button></span>
-        <span id="login"> <a href="sign.html"><button>login</button></a></span>
+        <span id="login"> <a href="login.html"><button>login</button></a></span>
         </center>
         </div>
         <div class="modal-content">
