--- a/login.html
+++ b/login.html
@@ -16,10 +16,8 @@
         </div>
         <div class="nav-menu" id="navMenu">
             <ul>
-                <li><a href="#" class="link active">Home</a></li>
-                <li><a href="#" class="link">Blog</a></li>
-                <li><a href="#" class="link">Services</a></li>
                 <li><a href="#" class="link">About</a></li>
+                <li><a href="https://github.com/siyabansal9" href="https://github.com/snehaj62" class="link">Contact Us</a></li>
             </ul>
         </div>
         <div class="nav-button">
@@ -49,7 +47,7 @@
             </div>
             <div class="input-box">
                 <!--<input type="submit" class="submit" value="Sign In">-->
-                <a class="submit" href="index.html">Sing In</a>
+                <a href="index(1).html" class="submit">Sing In</a>
             </div>
             <div class="two-col">
                 <div class="one">
